# tiny_nginx

./: CMakeLists.txt  main.cpp  nginx.conf.toml
app/: ngx_c_conf.cpp
epoll/: epoll.h
include/: global.h  ngx_c_conf.h  ngx_c_socket.h  ngx_connection.h  ngx_core.h  ngx_event.h  ngx_func.cpp  ngx_func.h
net/: ngx_c_socket.cpp  ngx_epoll_module.cpp
proc/: ngx_process_cycle.cpp
